# ha_octopus_intelligent_it

./: .gitignore  .release-please-config.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  hacs.json  lefthook.yml  pyproject.toml
.claude/agent-memory/claude-md-sync/: MEMORY.md  project_schedule_entity_model.md
.claude/agent-memory/code-conventions-reviewer/: MEMORY.md  project_ha_integration.md
.claude/agent-memory/plan-implementer/: MEMORY.md  project_dev_tooling.md  project_octopus_integration.md
.github/workflows/: release.yml  validate.yml
custom_components/octopus_intelligent_it/: __init__.py  binary_sensor.py  calendar.py  config_flow.py  const.py  coordinator.py  entity.py  kraken_client.py  manifest.json  number.py  queries.py  select.py  sensor.py  strings.json  time.py
custom_components/octopus_intelligent_it/translations/: en.json  it.json
